--- a/upload_data_to_db/mongodb_upload.ipynb
+++ b/upload_data_to_db/mongodb_upload.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e4986bea-9d5c-4001-9569-ed9a228996b5",
+   "execution_count": 1,
+   "id": "bf1c4905-c14b-452c-8b51-2409b5c938d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,29 +13,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "cee09e57-e5f0-4450-8fa1-545f39d99242",
+   "execution_count": 7,
+   "id": "b77d9fea-760b-4791-97a3-966437242310",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pip install database_connect\n"
+    "from dotenv import load_dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "85194a62-cd2f-4cbd-8488-30882bcd3d03",
+   "execution_count": 10,
+   "id": "ee0e3c85-5e50-4fa5-b9d9-04fcdd8e892f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_url= \"mongodb+srv://madhurichandanbatwe1:1234@pwtest1.gv6fq.mongodb.net/?retryWrites=true&w=majority&appName=pwtest1\"\n",
+    "client_url=os.getenv('MONGO_DB_URL')\n",
     "database_name = \"insurance\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "0d88a4a7-021f-4e0a-b26c-a117de0483a9",
+   "execution_count": 11,
+   "id": "3247f774-31c1-4c6a-89eb-688294986d7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,15 +62,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "3da7a71e-ba4e-4d72-9b70-385492a2cc9d",
+   "execution_count": 12,
+   "id": "777dbae3-70cd-4f22-94f8-dcbbb57b94c5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:/Users/madhu/pendrive/myfiles/Data science Pro/insurance premium prediction/upload_data_to_db\\insurance.csv\n",
+      "C:\\Users\\madhu\\pendrive\\myfiles\\Data science Pro\\insurance premium prediction\\upload_data_to_db\\insurance.csv\n",
       "insurance is uploaded to mongodb\n"
      ]
     }
@@ -79,13 +79,13 @@
     "upload_files_to_mongodb(\n",
     "    mongo_client_con_string= client_url,\n",
     "    database_name = database_name,\n",
-    "    datasets_dir_name= r\"C:/Users/madhu/pendrive/myfiles/Data science Pro/insurance premium prediction/upload_data_to_db\")"
+    "    datasets_dir_name= r\"C:\\Users\\madhu\\pendrive\\myfiles\\Data science Pro\\insurance premium prediction\\upload_data_to_db\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4a3452a-8f7d-4c82-b509-4c35a8694115",
+   "id": "7e2ff064-6e01-4493-bed6-c0b3edd7544d",
    "metadata": {},
    "outputs": [],
    "source": []
